<resources>
    <string name="recent_artists">Recent artists</string>
    <string name="recent_albums">Recent albums</string>
    <string name="top_artists">Top artists</string>
    <string name="top_albums">Top albums</string>
    <string name="suggestions">Suggestions</string>
    <string name="genres">Genres</string>
    <string name="pref_title_toggle_carousel_effect">Carousel effect</string>
    <string name="pref_summary_carousel_effect">Carousel effect in now playing screen album art.</string>
    <string name="pref_title_lyrics_options">Lyrics options</string>
    <string name="pref_summary_toggle_status_bar">Hide only status bar</string>
    <string name="pref_title_toggle_status_bar">Status bar</string>
    <string name="pref_summary_toggle_navigation_bar">Hide only navigation bar</string>
    <string name="pref_title_toggle_navigation_bar">Navigation bar</string>
    <string name="pref_summary_library_categories">Configure visibility and order of library categories.</string>
    <string name="edit_categories">Edit categories</string>
    <string name="at_least_one_category_must_be_enabled">At least one category must be enabled.</string>
    <string name="library_categories">Library categories</string>
    <string name="pref_header_general">General</string>
    <string name="accent_color">Accent color</string>
    <string name="accent_color_desc">The accent theme color, defaults to green.</string>
    <string name="no_genres">No genres</string>
    <string name="action_about">About</string>
    <string name="action_add_to_favorites">Add to favorites</string>
    <string name="action_add_to_playing_queue">Add to playing queue</string>
    <string name="action_add_to_playlist">Add to playlist…</string>
    <string name="action_clear_playing_queue">Clear playing queue</string>
    <string name="action_clear_playlist">Clear playlist</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_from_device">Delete from device</string>
    <string name="action_details">Details</string>
    <string name="action_go_to_album">Go to album</string>
    <string name="action_go_to_artist">Go to artist</string>
    <string name="action_go_to_start_directory">Go to start directory</string>
    <string name="action_grant">Grant</string>
    <string name="action_grid_size">Grid size</string>
    <string name="action_grid_size_land">Grid size (land)</string>
    <string name="action_new_playlist">New playlist…</string>
    <string name="action_next">Next</string>
    <string name="action_play">Play</string>
    <string name="action_play_next">Play next</string>
    <string name="action_play_pause">Play/Pause</string>
    <string name="action_previous">Previous</string>
    <string name="action_re_download_artist_image">Update artist image</string>
    <string name="action_remove_from_favorites">Remove from favorites</string>
    <string name="action_remove_from_playing_queue">Remove from playing queue</string>
    <string name="action_remove_from_playlist">Remove from playlist</string>
    <string name="action_rename">Rename</string>
    <string name="action_save_playing_queue">Save playing queue</string>
    <string name="action_scan">Scan</string>
    <string name="action_search">Search</string>
    <string name="action_set">Set</string>
    <string name="action_set_as_ringtone">Set as ringtone</string>
    <string name="action_set_as_start_directory">Set as start directory</string>
    <string name="action_settings">"Settings"</string>
    <string name="action_share">Share</string>
    <string name="action_show_lyrics">Show lyrics</string>
    <string name="action_shuffle_album">Shuffle album</string>
    <string name="action_shuffle_all">Shuffle all</string>
    <string name="action_shuffle_artist">Shuffle artist</string>
    <string name="action_shuffle_playlist">Shuffle playlist</string>
    <string name="action_sleep_timer">Sleep timer</string>
    <string name="action_tag_editor">Tag editor</string>
    <string name="add_action">Add</string>
    <string name="add_photo">Add \nphoto</string>
    <string name="add_playlist_title">"Add to playlist"</string>
    <string name="added_title_to_playing_queue">"Added 1 title to the playing queue."</string>
    <string name="added_x_titles_to_playing_queue">Added %1$d titles to the playing queue.</string>
    <string name="album">Album</string>
    <string name="album_artist">Album artist</string>
    <string name="album_desc">Album desc.</string>
    <string name="album_or_artist_empty">The title or artist is empty.</string>
    <string name="albums">Albums</string>
    <string name="always">Always</string>
    <string name="app_share">Hey check out this cool music player at: https://play.google.com/store/apps/details?id=%s</string>
    <string name="app_shortcut_last_added_long">@string/last_added</string>
    <string name="app_shortcut_last_added_short">@string/last_added</string>
    <string name="app_shortcut_shuffle_all_long">@string/action_shuffle_all</string>
    <string name="app_shortcut_shuffle_all_short">Shuffle</string>
    <string name="app_shortcut_top_tracks_long">@string/my_top_tracks</string>
    <string name="app_shortcut_top_tracks_short">Top Tracks</string>
    <string name="app_summary">A Hybrid application between Material design and iOS in mind.</string>
    <string name="app_widget_big_name">Retro music - Big</string>
    <string name="app_widget_big_name_2">Retro music - Big2</string>
    <string name="app_widget_card_name">Retro music - Card</string>
    <string name="app_widget_classic_name">Retro music - Classic</string>
    <string name="app_widget_small_name">Retro music - Small</string>
    <string name="artist">Artist</string>
    <string name="artist_desc">Artist desc.</string>
    <string name="artists">Artists</string>
    <string name="audio_focus_denied">Audio focus denied.</string>
    <string name="bass_boost_strength">Bass Boost Strength</string>
    <string name="biography">Biography</string>
    <string name="biography_unavailable">Couldn\u2019t find the artists biography.</string>
    <string name="black_theme_name">Just black</string>
    <string name="blacklist">Blacklist</string>
    <string name="cancel_current_timer">Cancel current timer</string>
    <string name="changelog">Changelog</string>
    <string name="changelog_summary">Change log maintained from Telegram app</string>
    <string name="clear_action">Clear</string>
    <string name="clear_blacklist">Clear blacklist</string>
    <string name="clear_playlist_title">Clear playlist</string>
    <string name="clear_playlist_x"><![CDATA[Clear the playlist <b>%1$s</b>? This can\u2019t be undone!]]></string>
    <string name="colored_footers">Colored footers</string>
    <string name="colors">Colors</string>
    <string name="could_not_create_playlist">Couldn\u2019t create playlist.</string>
    <string name="could_not_download_album_cover">"Couldn\u2019t download a matching album cover."</string>
    <string name="could_not_scan_files">Could not scan %d files.</string>
    <string name="create_action">Create</string>
    <string name="created_playlist_x">Created playlist %1$s.</string>
    <string name="currently_listening_to_x_by_x">Currently listening to %1$s by %2$s.</string>
    <string name="custom">Custom</string>
    <string name="date">Date</string>
    <string name="default_hint">No Lyrics</string>
    <string name="delete_action">Delete</string>
    <string name="delete_playlist_title">Delete playlist</string>
    <string name="delete_playlist_x"><![CDATA[Delete the playlist <b>%1$s</b>?]]></string>
    <string name="delete_playlists_title">Delete playlists</string>
    <string name="delete_song_title">Delete song</string>
    <string name="delete_song_x"><![CDATA[Delete the song <b>%1$s</b>?]]></string>
    <string name="delete_songs_title">Delete songs</string>
    <string name="delete_x_playlists"><![CDATA[Delete <b>%1$d</b> playlists?]]></string>
    <string name="delete_x_songs"><![CDATA[Delete <b>%1$d</b> songs?]]></string>
    <string name="deleted_x_songs">Deleted %1$d songs.</string>
    <string name="do_you_want_to_clear_the_blacklist">Do you want to clear the blacklist?</string>
    <string name="do_you_want_to_remove_from_the_blacklist"><![CDATA[Do you want to remove <b>%1$s</b> from the blacklist?]]></string>
    <string name="donate">Donate</string>
    <string name="donate_summary">If you think I deserve to get paid for my work, you can leave me a few dollars here.</string>
    <string name="download_from_last_fm">Download from Last.fm</string>
    <string name="duration">Duration</string>
    <string name="empty">Empty</string>
    <string name="equalizer">Equalizer</string>
    <string name="error_loading_lyrics_from_network">Error loading from network</string>
    <string name="failed_to_save_playlist">Failed to save playlist (%s).</string>
    <string name="favorites">Favorites</string>
    <string name="flat">Flat</string>
    <string name="folders">Folders</string>
    <string name="genre">Genre</string>
    <string name="grid_size_1">1</string>
    <string name="grid_size_2">2</string>
    <string name="grid_size_3">3</string>
    <string name="grid_size_4">4</string>
    <string name="grid_size_5">5</string>
    <string name="grid_size_6">6</string>
    <string name="grid_size_7">7</string>
    <string name="grid_size_8">8</string>
    <string name="history">History</string>
    <string name="home">Home</string>
    <string name="full">Full</string>
    <string name="pref_title_day_dream">Day dream</string>
    <string name="pref_summary_day_dream">Shows song details on dream when music is playing</string>
    <string name="inserted_x_songs_into_playlist_x">Inserted %1$d songs into the playlist %2$s.</string>
    <string name="loading_products">Loading products…</string>
    <string name="paypal">PayPal.me</string>
    <string name="paypal_summary">PayPal.me is an easy way to donate us money. In case you only linked a debit or credit card the fee in the U.S. is 2.9% of the donation plus $0.30 USD, otherwise there is no fee.<a href="https://www.paypal.com/us/selfhelp/article/What-are-the-fees-for-PayPal-accounts-FAQ690">more</a>
    </string>
    <string name="playlists">Playlists</string>
    <string name="pref_summary_round_corners">Corner edges for window, album art etc.</string>
    <string name="pref_summary_toggle_full_screen">Enable this for immersive mode</string>
    <string name="pref_summary_toggle_volume">If have space in now playing screen enable volume controls</string>
    <string name="pref_title_round_corners">Corner edges</string>
    <string name="pref_title_toggle_full_screen">Full screen app</string>
    <string name="pref_title_toggle_volume">Volume controls</string>
    <string name="songs">Songs</string>
    <string name="support_development">Support development</string>
    <string name="pref_summary_toggle_headset">When headphone jack plugged it\'s starts playing</string>
    <string name="pref_title_toggle_toggle_headset">Auto play</string>
    <string name="pref_summary_tab_titles">Enable/ disable bottom tabs titles</string>
    <string name="pref_title_toggle_tab_titles">Tab titles</string>
    <string name="pref_summary_language_en">Change app language forcefully to english(this is testing for multiple language option)</string>
    <string name="pref_title_toggle_language_en">English language</string>
    <string name="pref_summary_toggle_genre">Don\'t want to show genre hide it</string>
    <string name="pref_title_toggle_genre">Hide genre</string>
    <string name="pref_title_external_storage_access">Give access  to external storage</string>
    <string name="window">Window</string>
    <string name="personalize">Personalize</string>
    <string name="support_development_summary">If your enjoy using Retro Music Player consider donation as support to my work.</string>
</resources>