<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory android:title="@string/personalize">
        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="false"
            android:key="toggle_volume"
            android:summary="@string/pref_summary_toggle_volume"
            android:title="@string/pref_title_toggle_volume" />
        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="false"
            android:key="toggle_tab_titles"
            android:summary="@string/pref_summary_tab_titles"
            android:title="@string/pref_title_toggle_tab_titles" />
        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="false"
            android:key="toggle_genre"
            android:summary="@string/pref_summary_toggle_genre"
            android:title="@string/pref_title_toggle_genre" />
    </com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory>
</android.support.v7.preference.PreferenceScreen>