<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home_white_24dp"
        android:title="@string/home"/>
    <item
        android:id="@+id/action_song"
        android:enabled="true"
        android:icon="@drawable/ic_audiotrack_black_24dp"
        android:title="@string/songs" />
    <item
        android:id="@+id/action_album"
        android:enabled="true"
        android:icon="@drawable/ic_album_white_24dp"
        android:title="@string/albums" />
    <item
        android:id="@+id/action_artist"
        android:enabled="true"
        android:icon="@drawable/ic_artist_white_24dp"
        android:title="@string/artists" />
    <item
        android:id="@+id/action_playlist"
        android:enabled="true"
        android:icon="@drawable/ic_playlist_play_white_24dp"
        android:title="@string/playlists" />
    <!--<item
        android:id="@+id/action_genre"
        android:enabled="true"
        android:icon="@drawable/ic_recent_actors_white_24dp"
        android:title="@string/genres" />-->
</menu>