<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="96dp"
            app:collapsedTitleTextAppearance="@style/CollapsedTitleAppearance"
            app:expandedTitleGravity="top"
            app:expandedTitleMarginStart="16dp"
            app:expandedTitleMarginTop="48dp"
            app:expandedTitleTextAppearance="@style/ExpandedTitleAppearance"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="@string/support_development">

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/Toolbar48"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_close_white_24dp"
                app:title="@string/support_development" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/progress_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/md_content_padding_top"
                android:paddingLeft="@dimen/md_dialog_frame_margin"
                android:paddingRight="@dimen/md_dialog_frame_margin"
                android:paddingTop="@dimen/md_content_padding_top" >

                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:gravity="start"
                    android:paddingLeft="16dp"
                    android:text="@string/loading_products"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="6dp"
                android:paddingStart="6dp"
                android:scrollbarStyle="outsideOverlay" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gradient_5"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        fontPath="fonts/sans_bold.ttf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:text="@string/paypal"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                        android:textColor="@color/md_white_1000"
                        tools:ignore="MissingPrefix" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="16dp"
                        android:paddingStart="16dp"
                        android:text="@string/paypal_summary"
                        android:textColor="@color/md_white_1000" />


                    <Button
                        android:id="@+id/donate"
                        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/donate"
                        android:textColor="@color/md_white_1000" />

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>