<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="6dp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:id="@+id/donation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/rectSelector"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:minHeight="@dimen/md_listitem_height"
            android:orientation="horizontal"
            tools:ignore="PrivateResource">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:paddingTop="8dp">


                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/support_development"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="?android:attr/textColorPrimary" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.85"
                    android:text="@string/support_development_summary"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="?android:attr/textColorSecondary" />
            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingEnd="16dp"
            android:paddingStart="16dp">

            <android.support.v7.widget.CardView
                android:id="@+id/support_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/social_buttons"
                android:foreground="?rectSelector"
                app:cardCornerRadius="24dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@drawable/gradient_transisition_2"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/donate"
                    android:textColor="@color/md_white_1000" />
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>